# lab08

./: .clang-format  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: cmake.yml
docs/html/: dir_000001_000000.html  dir_08d237fc27d4ecd563f71c5d52f2fecc.html  dir_08d237fc27d4ecd563f71c5d52f2fecc_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  md_README.html  pages.html  print_8hpp.html  print_8hpp__incl.dot  print_8hpp_source.html
docs/html/search/: all_0.js  functions_0.js  searchdata.js
examples/: example1.cpp  example2.cpp
include/: print.hpp
sources/: print.cpp
tests/: test1.cpp
